@@ -304,7 +304,7 @@ while (isset($_FILES['userfile']['tmp_name']) && sizeof($_FILES['userfile']['tmp
 
     if ($name) {
         if (!empty($usercaption) && is_array($usercaption)) {
-            $caption = strip_tags(array_shift($usercaption));
+            $caption = array_shift($usercaption);
         } else {
             $caption = '';
         }
