@@ -196,8 +196,8 @@ if (!empty($save)) {
     } elseif (isBlacklistedComment($tmp = array('commenter_name' => $commenter_name, 'comment_text' => $comment_text), false)) {
         $error_text = gTranslate('core', "Your Comment contains forbidden words. It will not be added.");
     } else {
-        $comment_text = strip_tags($comment_text);
-        $commenter_name = strip_tags($commenter_name);
+        $comment_text = $comment_text;
+        $commenter_name = $commenter_name;
         $IPNumber = $_SERVER['REMOTE_ADDR'];
         $gallery->album->addComment($id, $comment_text, $IPNumber, $commenter_name);
         $gallery->album->save();
