@@ -1,4 +1,8 @@
-2006-04-05 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b22
+2006-04-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b23
+
+ * Change: Allow HTML again also in comments and user captions for images.
+
+2006-04-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b22
 
  * Fix: ImageMap was opened was popup when no icons are used.
 
